# FourierTask_assignment

./: .gitignore  README.md
openCVcourse/: openCVcourse.sln
openCVcourse/build-openCVcourse-Desktop-Debug/: CMakeCache.txt  FourierTask_assignment  FourierTask_assignment.cbp  Makefile  cmake_install.cmake
openCVcourse/build-openCVcourse-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-ebed02eee69f4c2252f6.json  cmakeFiles-v1-33c3405fe427c75aebac.json  codemodel-v2-59ce3a58418ca34fefb3.json  index-2021-12-06T16-04-57-0966.json  target-FourierTask_assignment-Debug-b3606009c0243c10b57e.json
openCVcourse/openCVcourse/: CMakeLists.txt  Chapter1.cpp  Chapter2.cpp  Chapter3.cpp  Chapter4.cpp  Chapter5.cpp  Chapter6.cpp  Chapter7.cpp  Excercise_2_Image_Filtering.cpp  Exercise_1_Basic_color_conversion.cpp  Exercise_3_Histogramss.cpp  FourierTask_assignment.cpp  HoughCircleTrans.cpp  openCVcourse.vcxproj  openCVcourse.vcxproj.filters
openCVcourse/openCVcourse/x64/Debug/: chapter2.obj.enc  exercise_1_basic_color_conversion.obj.enc  openCVcourse.exe.recipe  openCVcourse.ilk  test.obj.enc  vc142.idb
openCVcourse/openCVcourse/x64/Debug/openCVcourse.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  openCVcourse.lastbuildstate
